--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.0",
     "intl-messageformat": "^10.5.0",
+    "lucide-react": "^0.474.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
