--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.18",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.0",
     "intl-messageformat": "^10.5.0",
